--- a/assets/component-image-with-text.css
+++ b/assets/component-image-with-text.css
@@ -1,3 +1,4 @@
+
 .image-with-text .grid {
   margin-bottom: 0;
 }
@@ -10,6 +11,7 @@
   .image-with-text__grid--reverse {
     flex-direction: row-reverse;
   }
+
 }
 
 .image-with-text__media {
@@ -21,10 +23,6 @@
   height: 19.4rem;
 }
 
-.image-with-text__media--medium {
-  height: 29.6rem;
-}
-
 .image-with-text__media--large {
   height: 43.5rem;
 }
@@ -32,10 +30,6 @@
 @media screen and (min-width: 750px) {
   .image-with-text__media--small {
     height: 31.4rem;
-  }
-
-  .image-with-text__media--medium {
-    height: 46rem;
   }
 
   .image-with-text__media--large {
@@ -175,6 +169,10 @@
   margin: -3rem auto 0;
 }
 
+.image-with-text__grid--reverse .image-with-text__content--desktop-left {
+  padding-left: 0;
+}
+
 @media screen and (min-width: 750px) {
   .image-with-text__grid--reverse .image-with-text__content {
     margin-left: auto;
@@ -283,12 +281,11 @@
     var(--text-boxes-shadow-vertical-offset)
     var(--text-boxes-shadow-blur-radius)
     rgba(var(--color-shadow), var(--text-boxes-shadow-opacity));
-  word-break: break-word;
 }
 
 @media screen and (min-width: 990px) {
   .image-with-text__content {
-    padding: 6rem 7rem 7rem;
+    padding: 1rem 7rem 1rem;
   }
 }
 
@@ -320,50 +317,19 @@
 }
 
 .image-with-text__heading {
+  word-break: break-word;
   margin-bottom: 0;
 }
 
 .image-with-text__text p {
+  word-break: break-word;
   margin-top: 0;
   margin-bottom: 1rem;
-}
-
-@media screen and (max-width: 749px) {
-  .collapse-padding .image-with-text__grid .image-with-text__content {
-    padding-left: 0;
-    padding-right: 0;
-  }
-}
-
-@media screen and (min-width: 750px) {
-  .collapse-padding .image-with-text__grid:not(.image-with-text__grid--reverse) .image-with-text__content:not(.image-with-text__content--desktop-center) {
-    padding-right: 0;
-  }
-
-  .collapse-padding .image-with-text__grid--reverse .image-with-text__content:not(.image-with-text__content--desktop-center) {
-    padding-left: 0;
-  }
 }
 
 /* check for flexbox gap in older Safari versions */
 @supports not (inset: 10px) {
   .image-with-text .grid {
     margin-left: 0;
-  }
-}
-
-/*
-  Multirow
-  note: consider removing from this stylesheet if multirow-specific styles increase signficantly
-*/
-.multirow__inner {
-  display: flex;
-  flex-direction: column;
-  row-gap: var(--grid-mobile-vertical-spacing);
-}
-
-@media screen and (min-width: 750px) {
-  .multirow__inner {
-    row-gap: var(--grid-desktop-vertical-spacing);
   }
 }
