--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -16,7 +16,10 @@
 }
 
 @media screen and (min-width: 750px) {
-  .product__column-sticky {
+  .product--thumbnail .product__media-gallery,
+  .product--thumbnail_slider .product__media-gallery,
+  .product--stacked .product__info-container--sticky,
+  .product--columns .product__info-container--sticky {
     display: block;
     position: sticky;
     top: 3rem;
@@ -230,10 +233,6 @@ fieldset.product-form__input .form__label {
   color: rgb(var(--color-background));
 }
 
-.product-form__input input[type='radio']:not(.disabled) + label > .visually-hidden {
-  display: none;
-}
-
 @media screen and (forced-colors: active) {
   .product-form__input input[type=radio]:checked + label {
     text-decoration: underline;
@@ -319,9 +318,8 @@ fieldset.product-form__input .form__label {
 }
 
 .product__info-container .product-form,
-.product__info-container .product__description,
-.product__info-container .icon-with-text {
-  margin: 2.5rem 0;
+.product__info-container .product__description {
+  margin: 1.9rem 0;
 }
 
 .product__text {
@@ -408,7 +406,6 @@ a.product__text {
 .product--no-media .product__text,
 .product--no-media noscript .product-form__input,
 .product--no-media .product__tax,
-.product--no-media .product__sku,
 .product--no-media shopify-payment-terms {
   text-align: center;
 }
@@ -773,8 +770,8 @@ a.product__text {
 }
 
 @media screen and (max-width: 749px) {
-  .product--thumbnail .is-active .product__modal-opener:not(.product__modal-opener--image),
-  .product--thumbnail_slider .is-active .product__modal-opener:not(.product__modal-opener--image) {
+  .product--thumbnail .is-active > .product__modal-opener:not(.product__modal-opener--image),
+  .product--thumbnail_slider .is-active > .product__modal-opener:not(.product__modal-opener--image) {
     display: none;
   }
 
@@ -965,7 +962,7 @@ a.product__text {
   font-size: 1.6rem;
   padding-right: 1.3rem;
   padding-left: 0;
-  min-height: 4.4rem;
+  height: 4.4rem;
   text-underline-offset: 0.3rem;
   text-decoration-thickness: 0.1rem;
   transition: text-decoration-thickness var(--duration-short) ease;
@@ -1151,56 +1148,6 @@ a.product__text {
   border-color: rgb(var(--color-foreground));
 }
 
-.image-magnify-full-size {
-  cursor: zoom-out;
-  z-index: 1;
-  margin: 0;
-  border-radius: calc(var(--media-radius) - var(--media-border-width));
-}
-
-.image-magnify-hover {
-  cursor: zoom-in;
-}
-
-.product__modal-opener--image .product__media-zoom-none,
-.product__media-icon--none {
-  display: none;
-}
-
-.product__modal-opener > .loading-overlay__spinner {
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  position: absolute;
-  display: flex;
-  align-items: center;
-  height: 48px;
-  width: 48px;
-}
-
-.product__modal-opener .path {
-  stroke: rgb(var(--color-base-accent-1));
-  opacity: 0.75;
-}
-
-@media (hover: hover) {
-  .product__media-zoom-hover,
-  .product__media-icon--hover {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 749px) {
-  .product__media-zoom-hover,
-  .product__media-icon--hover {
-    display: flex;
-  }
-}
-
-.js .product__media {
-  overflow: hidden !important;
-}
-
 .thumbnail[aria-current]:focus-visible {
   box-shadow: 0 0 0 0.3rem rgb(var(--color-background)),0 0 0rem 0.5rem rgba(var(--color-foreground), 0.5);
 }
@@ -1224,10 +1171,18 @@ a.product__text {
 }
 
 .thumbnail img {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
   pointer-events: none;
+}
+
+.thumbnail--narrow img {
+  height: 100%;
+  width: auto;
+  max-width: 100%;
+}
+
+.thumbnail--wide img {
+  height: auto;
+  width: 100%;
 }
 
 .thumbnail__badge .icon {
@@ -1296,27 +1251,6 @@ a.product__text {
   flex-shrink: 0;
 }
 
-/* Inventory status */
-
-.product__inventory {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.product--no-media .product__inventory {
-  justify-content: center;
-}
-
-/* This keeps the container from getting display: none; applied to it and to make sure we're not introducing some layout shift when switching to an unavailable variant */
-.product__inventory.visibility-hidden:empty {
-  display: block;
-}
-
-.product__inventory.visibility-hidden:empty::after {
-  content: "#";
-}
-
 /* Icon with text */
 .icon-with-text {
   --icon-size: calc(var(--font-heading-scale) * 3rem);
@@ -1328,10 +1262,12 @@ a.product__text {
   justify-content: center;
   column-gap: 3rem;
   flex-direction: row;
+  padding-top: 2rem;
 }
 
 .icon-with-text--vertical {
   --icon-size: calc(var(--font-heading-scale) * 2rem);
+  padding-top: 1.5rem;
 }
 
 .icon-with-text .icon {
@@ -1386,80 +1322,16 @@ a.product__text {
   margin-bottom: var(--icon-size);
 }
 
-/* SKU block */
-
-.product__sku.visibility-hidden::after {
-  content: "#";
-}
-
 /* Product-thumbnail snippet */
 
 .product-media-container {
-  --aspect-ratio: var(--preview-ratio);
-  --ratio-percent: calc(1 / var(--aspect-ratio) * 100%);
-  position: relative;
   width: 100%;
   max-width: calc(100% - calc(var(--media-border-width) * 2));
-}
-
-.product-media-container.constrain-height {
-  /* arbitrary offset value based on average theme spacing and header height */
-  --viewport-offset: 400px;
-  --constrained-min-height: 300px;
-  --constrained-height: max(var(--constrained-min-height), calc(100vh - var(--viewport-offset)));
-  margin-right: auto;
-  margin-left: auto;
-}
-
-.product-media-container.constrain-height.media-fit-contain {
-  --contained-width: calc(var(--constrained-height) * var(--aspect-ratio));
-  width: min(var(--contained-width), 100%);
-}
-
-.product-media-container .media {
-  padding-top: var(--ratio-percent);
-}
-
-.product-media-container.constrain-height .media {
-  padding-top: min(var(--constrained-height), var(--ratio-percent));
-}
-
-@media screen and (max-width: 749px) {
-  .product-media-container.media-fit-cover {
-    display: flex;
-    align-self: stretch;
-  }
-
-  .product-media-container.media-fit-cover .media {
-    /* allow media img element to scale relative to modal-opener/product-media-container */
-    position: initial;
-  }
 }
 
 @media screen and (min-width: 750px) {
   .product-media-container {
     max-width: 100%;
-  }
-
-  .product-media-container:not(.media-type-image) {
-    /* override to use actual media ratio (not poster ratio) for video/models on desktop */
-    --aspect-ratio: var(--ratio);
-  }
-
-  .product-media-container.constrain-height {
-    --viewport-offset: 170px;
-    --constrained-min-height: 500px;
-  }
-
-  .product-media-container.media-fit-cover,
-  .product-media-container.media-fit-cover .product__modal-opener,
-  .product-media-container.media-fit-cover .media {
-    height: 100%;
-  }
-
-  .product-media-container.media-fit-cover .deferred-media__poster img {
-    object-fit: cover;
-    width: 100%;
   }
 }
 
@@ -1472,4 +1344,8 @@ a.product__text {
   .product-media-container .product__modal-opener:not(.product__modal-opener--image) {
     display: none;
   }
+}
+
+.product-media-container .media {
+  padding-top: var(--ratio-percent);
 }
